# defect-diagnosis-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: GLOSSARY.md
docs/adr/: ADR-001-langgraph.md  ADR-002-embedding-placement.md  ADR-003-data-subset.md  ADR-004-storage.md  ADR-005-model-placement.md
docs/specs/: SPEC-00-overview.md  SPEC-01-schema.md  SPEC-02-ingest.md  SPEC-03-tools.md  SPEC-04-orchestrator.md  SPEC-05-demo.md  SPEC-06-eval.md
eval/: results.md  run_eval.py  testset.txt
src/: config.py  demo.py  ingest.py  orchestrator.py  schema.py  tools.py
stub_data/: 2023_yeongkwang_1_A_SuctionSide_006.json  2024_sungsan_5_A_LeadingEdge_002.json  2025_gangwon_3_B_TrailingEdge_004.json  2025_sungsan_2_C_PressureSide_005.json  2025_sungsan_5_A_LeadingEdge_001.json  2025_sungsan_5_A_LeadingEdge_003.json
tests/: test_eval.py  test_ingest.py  test_orchestrator.py  test_schema.py  test_tools.py
